# Rudra-Dev

./: CMakeLists.txt  README.md  User Guide.md  a.out  file  rudra_activate.c  rudra_activate.h  rudra_core.c  rudra_core.h  rudra_def.h  rudra_init.c  rudra_init.h  rudra_normalization.c
include/: c  csv.h  rudra_normalization.h  vector.h  xalloc.h
include/rudra/: rudra.h
modules/: .CMakeLists.txt.swp
modules/ann/: CMakeCache.txt  CMakeLists.txt
modules/ann/include/rudra/: ann.h
modules/ann/include/rudra/ann/: .layers.h.swp  activation.h  def.h  layer_manipulation.h  layers.h  matrix_operations.h  optimizer.h  propogation.h  structure.h  vector.h  xalloc.h
modules/ann/src/: .matrix_operations.c.swp  activation.c  layer_manipulation.c  layer_manipulation.h  matrix_operations.c  matrix_operations.c.save  optimizer.c  propogation.c  vector.c  xalloc.c
modules/ann/ubild/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libann.so.1  libann.so.1.0.0
modules/dp/: CMakeLists.txt
modules/dp/include/rudra/: dp.h  optimizer.h
modules/dp/include/rudra/dp/: csv.h  csv_operations.h  def.h  missing_data.h  normalization.h  operations.h  vector.h  xalloc.h
modules/dp/src/: csv.c  csv.c.save  csv_operations.c  missing_data.c  normalization.c  operations.c  vector.c  xalloc.c
modules/dp/test/: main.c
src/: CMakeLists.txt  csv.c  vector.c  xalloc.c
unit_tests/: CMakeLists.txt  normalize.c
