cmake_minimum_required(VERSION 2.8)
#project(rudra_src)
#set(rudra_src_files
#	rudra_normalization.c
#)

#include_directories(../include)
#add_library(rudra_src ${rudra_src_files})
#target_link_libraries(rudra_src rudra_hdr)


include_directories(${rudra_SOURCE_DIR}/inc)
#add_library(rudra_src main.c)
#add_executable(rudra_src rudra_normalization.c)
